--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manhuwa Reader - Free Manga and Manhua Reading. Fast and Easy to Use!</title>
+
+  <!-- Favicons / PWA -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Windows tile (uses the favicon/png as tile image) -->
+  <meta name="msapplication-TileColor" content="#ffffff" />
+  <meta name="msapplication-TileImage" content="/favicon-32x32.png" />
+  <meta name="theme-color" content="#ffffff" />
+
+    <title>MangaFlow | Free Manga & Manhua - Just One Ad Per 24 Hours</title>
+
+    <meta name="description" content="Tired of constant ad interruptions? At MangaFlow, read thousands of manga and manhua titles for free. Our promise is simple: watch a single ad to unlock a completely ad-free reading experience for the next 24 hours." />
+
     <script>
       (function() {
         try {
+          // For consistency, you might want to rename this key to 'mangaflow-theme'
           var key = 'mangaverse-theme';
           var saved = localStorage.getItem(key);
           if (saved === 'light') return document.documentElement.classList.remove('dark');
@@ -17,13 +33,14 @@
           }
           document.documentElement.classList.add('dark');
         } catch (e) {
-          console.error('Error::',e)
+          console.error('Error setting theme:', e);
         }
       })();
     </script>
   </head>
   <body>
     <div id="root"></div>
+    
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
